--- a/package.json
+++ b/package.json
@@ -22,11 +22,9 @@
   },
   "homepage": "https://github.com/alkanoic/VitePressSample#readme",
   "devDependencies": {
-    "@types/node": "^20.8.9",
-    "flexsearch": "^0.7.31",
+    "@types/node": "^20.16.10",
     "markdown-it": "^13.0.2",
     "markdown-it-plantuml": "^1.4.1",
-    "vitepress": "^1.0.0-rc.24",
-    "vitepress-plugin-search": "^1.0.4-alpha.20"
+    "vitepress": "^1.3.4"
   }
 }
