--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,16 @@
-image: node:18
-
-stages:
-  - build
-  - deploy
-
-variables:
-  GIT_SUBMODULE_STRATEGY: recursive
-
-build:
-  stage: build
+# The Docker image that will be used to build your app
+image: node:lts
+# Functions that should be executed before the build script is run
+before_script:
+  - npm ci
+pages:
   script:
-    - npm ci
     - npm run docs:build
   artifacts:
     paths:
-      - .vitepress/dist
-
-deploy:
-  stage: deploy
-  script:
-    - mv .vitepress/dist public
-  artifacts:
-    paths:
+      # The folder that contains the files to be exposed at the Page URL
       - public
-  only:
-    - main
+  rules:
+    # This ensures that only pushes to the default branch will trigger
+    # a pages deploy
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
